remove database.yml from git and ignore it. Cap link datatabase.yml

--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -1,6 +1,6 @@
 development:
   adapter: postgresql
-  database: comman_damian
+  database: comman
   host: localhost
   username: postgres
   password: postgres
