--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore all environment files (except sample).
+# Ignore all environment files (except templates).
 /.env*
 !/.env.sample
 
@@ -33,8 +33,3 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-
-/app/assets/builds/*
-!/app/assets/builds/.keep
-
-/node_modules
