--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -2,12 +2,12 @@
 service: comman
 
 # Name of the container image.
-image: your-user/comman
+image: damianfarina/comman
 
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.0.1
+    - cuartoterminal.dev
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -19,13 +19,13 @@ servers:
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
-  host: app.example.com
+  host: comman.cuartoterminal.dev
 
 # Credentials for your image host.
 registry:
   # Specify the registry server, if you're not using Docker Hub
   # server: registry.digitalocean.com / ghcr.io / ...
-  username: your-user
+  username: damianfarina
 
   # Always use an access token rather than real password (pulled from .kamal/secrets).
   password:
