--- a/config/database.yml
+++ b/config/database.yml
@@ -84,7 +84,11 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: comman_production
+    username: <%= ENV["POSTGRES_USER"] %>
+    database: <%= ENV["POSTGRES_DB"] %>
+    password: <%= ENV["POSTGRES_PASSWORD"] %>
+    host: <%= ENV["DB_HOST"] %>
+    port: <%= ENV["DB_PORT"] %>
   cache:
     <<: *primary_production
     database: comman_production_cache
