--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -7,7 +7,7 @@ image: damianfarina/comman
 # Deploy to these servers.
 servers:
   web:
-    - cuartoterminal.dev
+    - comman.cuartoterminal.dev
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -36,6 +36,7 @@ registry:
 env:
   secret:
     - RAILS_MASTER_KEY
+    - POSTGRES_PASSWORD
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
@@ -105,7 +106,7 @@ builder:
 accessories:
   db:
     image: postgres:17.2
-    host: cuartoterminal.dev
+    host: comman.cuartoterminal.dev
     # Change to 3306 to expose port to the world instead of just local network.
     port: "127.0.0.1:5432:5432"
     env:
