--- a/config/database.yml
+++ b/config/database.yml
@@ -84,7 +84,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    username: <%= ENV["POSTGRES_USER"] %>
+    username: comman
     database: comman_production
     password: <%= ENV["POSTGRES_PASSWORD"] %>
     host: <%= ENV["DB_HOST"] %>
