--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -111,8 +111,8 @@ accessories:
     port: "127.0.0.1:5432:5432"
     env:
       clear:
-        POSTGRES_USER: "${POSTGRES_USER}"
-        POSTGRES_DB: "${POSTGRES_DB}"
+        POSTGRES_USER: comman
+        POSTGRES_DB: comman_production
       secret:
         - POSTGRES_PASSWORD
     directories:
