--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -71,6 +71,8 @@ aliases:
 # Recommended to change this to a mounted volume path that is backed up off server.
 volumes:
   - "comman_storage:/rails/storage"
+  - "/etc/letsencrypt/live/cuartoterminal.dev/fullchain.pem:/etc/letsencrypt/live/cuartoterminal.dev/fullchain.pem"
+  - "/etc/letsencrypt/live/cuartoterminal.dev/privkey.pem:/etc/letsencrypt/live/cuartoterminal.dev/privkey.pem"
 
 
 # Bridge fingerprinted assets, like JS and CSS, between versions to avoid
