--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -7,7 +7,10 @@ image: damianfarina/comman
 # Deploy to these servers.
 servers:
   web:
-    - 192.168.54.15
+    hosts:
+      - 190.15.214.89
+    options:
+      publish: "4001:4001"
   # job:
   #   hosts:
   #     - 192.168.0.1
@@ -17,10 +20,10 @@ servers:
 # Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
 #
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
-# proxy:
-#   ssl: true
-#   host: 192.168.54.15
-#   app_port: 3000
+proxy:
+  ssl: false
+  host: 190.15.214.89
+  app_port: 4001
 
 # Credentials for your image host.
 registry:
@@ -109,7 +112,7 @@ builder:
 accessories:
   db:
     image: postgres:17.2
-    host: 192.168.54.15
+    host: 190.15.214.89
     # Change to 3306 to expose port to the world instead of just local network.
     port: "127.0.0.1:5432:5432"
     env:
