Add client index, edit and update

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 POSTGRES_USER=your_postgresql_username
 POSTGRES_PASSWORD=your_postgresql_password
 REVISION_ID="F1-PPU-6 REV0"
+DEFAULT_COUNTRY="Argentina"
+DEFAULT_PROVINCE="Mendoza"
