--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ POSTGRES_PASSWORD=your_postgresql_password
 REVISION_ID="F1-PPU-6 REV0"
 DEFAULT_COUNTRY="Argentina"
 DEFAULT_PROVINCE="Mendoza"
+SENDGRID_API_KEY="apikey"
+SENDGRID_DOMAIN="some.hostname.com"
