--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -40,6 +40,8 @@ env:
   secret:
     - RAILS_MASTER_KEY
     - POSTGRES_PASSWORD
+    - SENDGRID_API_KEY
+    - SENDGRID_DOMAIN
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
@@ -142,9 +144,3 @@ accessories:
         - POSTGRES_PASS
     directories:
       - backups:/backups
-#   redis:
-#     image: valkey/valkey:8
-#     host: 192.168.0.2
-#     port: 6379
-#     directories:
-#       - data:/data
