--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ DEFAULT_COUNTRY="Argentina"
 DEFAULT_PROVINCE="Mendoza"
 SENDGRID_API_KEY="apikey"
 SENDGRID_DOMAIN="some.hostname.com"
+SENDGRID_FROM="comman@hostname.com"
