--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+KAMAL_SECRETS_ADAPTER=adapter
+KAMAL_SECRETS_ACCOUNT=account
 POSTGRES_USER=your_postgresql_username
 POSTGRES_PASSWORD=your_postgresql_password
 REVISION_ID="F1-PPU-6 REV0"
@@ -5,5 +7,6 @@ DEFAULT_COUNTRY="Argentina"
 DEFAULT_PROVINCE="Mendoza"
 SENDGRID_API_KEY="apikey"
 SENDGRID_DOMAIN="some.hostname.com"
+SENDGRID_USER_NAME="comman@hostname.com"
 SENDGRID_FROM_EMAIL="comman@hostname.com"
 SENDGRID_FROM_NAME="[ comman @ Hostname ]"
