Extract to environment variables default deploy

--- a/.env.sample
+++ b/.env.sample
@@ -1,12 +1,12 @@
-KAMAL_SECRETS_ADAPTER=adapter
-KAMAL_SECRETS_ACCOUNT=account
+KAMAL_REGISTRY_PASSWORD=your_registry_password
+KAMAL_REGISTRY_USER=your_registry_user
 POSTGRES_USER=your_postgresql_username
 POSTGRES_PASSWORD=your_postgresql_password
-REVISION_ID="F1-PPU-6 REV0"
+SENDGRID_API_KEY=your_sendgrid_api_key
+SENDGRID_DOMAIN=your_sendgrid_domain
+SENDGRID_USER_NAME=your_sendgrid_username
+SENDGRID_FROM_EMAIL=your_sendgrid_from_email
+SENDGRID_FROM_NAME=your_sendgrid_from_name
+REVISION_ID="your_forms_revision_id"
 DEFAULT_COUNTRY="Argentina"
 DEFAULT_PROVINCE="Mendoza"
-SENDGRID_API_KEY="apikey"
-SENDGRID_DOMAIN="some.hostname.com"
-SENDGRID_USER_NAME="comman@hostname.com"
-SENDGRID_FROM_EMAIL="comman@hostname.com"
-SENDGRID_FROM_NAME="[ comman @ Hostname ]"
