Add mechanism to exceptionally disable audit logging

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+spec/examples.txt
 
 # Ignore pidfiles, but keep the directory.
 /tmp/pids/*
@@ -44,3 +45,4 @@
 /config/deploy.*.yml
 !/config/deploy.yml
 /.kamal/secrets.*
+
