--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -13,3 +13,5 @@ Style/TrailingCommaInHashLiteral:
   EnforcedStyleForMultiline: consistent_comma
 Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: comma
+Style/StringLiterals:
+  EnforcedStyle: double_quotes
