--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,9 @@ EMAIL_FROM_NAME=your_email_from_name
 REVISION_ID="your_forms_revision_id"
 DEFAULT_COUNTRY="Argentina"
 DEFAULT_PROVINCE="Mendoza"
+
+APPSIGNAL_APP_NAME="COMMAN"
+APPSIGNAL_ACTIVE=false
+APPSIGNAL_APP_ENV=development
+APPSIGNAL_FRONTEND_API_KEY=your_appsignal_frontend_api_key
+APPSIGNAL_PUSH_API_KEY=your_appsignal_push_api_key
